# pgx

./: .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: 2026-02-14-pg-embedded-cli-execplan.md
src/: extensions.rs  main.rs
