[package]
name = "pgx"
version = "0.2.0"
edition = "2024"
description = "Run embedded PostgreSQL 18 locally"
homepage = "https://github.com/usecontextlayer/pgx"
repository = "https://github.com/usecontextlayer/pgx"

[dependencies]
clap = { version = "4", features = ["derive"] }
postgresql_embedded = { version = "0.20", features = ["tokio", "theseus"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
