[package]
name = "pgx"
version = "0.3.0"
edition = "2024"
description = "Run embedded PostgreSQL 17 locally"
homepage = "https://github.com/usecontextlayer/pgx"
repository = "https://github.com/usecontextlayer/pgx"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
postgresql_archive = { version = "0.20", features = ["zip"] }
postgresql_embedded = { version = "0.20", features = ["tokio", "theseus"] }
postgresql_extensions = "0.20"
regex-lite = "0.1"
semver = "1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
